monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4060/A4060a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4060;

grammar A4060a {
  interface I;

  A implements I = I "+" I;

  B = (A || ",")+;

}
